# CrustaneRev

./: Cargo.toml  README.md
src/: botevent.rs  command.rs  error_glue.rs  init.rs  main.rs  utils.rs
src/backend/: backend.rs  mod.rs  superuser.rs
src/backend/dbmaint/: mod.rs
src/command/: host.rs  liberate.rs  liberator.rs  mod.rs  ping.rs  slash_si.rs  slash_sr.rs  slash_ss.rs  slash_su.rs  sql.rs  ssi.rs  su.rs
src/utils/: mod.rs  wrappers.rs
