[package]
name = "CrustaneRev"
version = "0.1.0"
edition = "2024"

[dependencies]
botrs = "0.2.4"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
chrono = "0.4.41"
whoami = "1.6.1"
size = "0.5.0"
sysinfo = "0.35.2"
totp-rs = { version = "5.7.0", features = ["otpauth"] }
qr2term = "0.3.3"
libsimple = "~0.6"
once_cell = "1.21.3"
lazy_static = "1.5.0"
reqwest = { version = "0.12.23", features = ["stream"] }
uuid = "1.18.1"
futures = "0.3.31"
